--- a/index.html
+++ b/index.html
@@ -26,23 +26,48 @@
         <form id="search-form" class="form">
           <div class="form-inline form-group">
             <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
+              <input class="form-input weather-search w-100 mb-1" type="text" id="search-input" placeholder="London"
                 aria-labelledby="form-heading" aria-controls="today forecast" />
               <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
+                <button type="submit" class="btn search-button btn-primary btn-block" id="search-button"
+                  aria-label="submit search">
                   Search
                 </button>
                 <hr class="hr weather-hr" />
+                
               </div>
             </div>
           </div>
         </form>
-        <div class="list-group" id="history"></div>
+        <div class="list-group" id="history">
+
+          <button class="btn-secondary mb-1">placehold</button>
+          <button class="btn-secondary mb-1">placehold</button>
+          <button class="btn-secondary mb-1">placehold</button>
+          <button class="btn-secondary mb-1">placehold</button>
+          <button class="btn-secondary mb-1">placehold</button>
+
+        </div>
       </aside>
 
       <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+        <section id="today" class="mt-3" role="region" aria-live="polite">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi repudiandae, exercitationem
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi repudiandae, exercitationem
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi repudiandae, exercitationem
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi repudiandae, exercitationem
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi repudiandae, exercitationem
+        </section>
+        <section id="forecast" class="row mt-3" role="region" aria-live="polite">
+          <div class="col-sm card h-100">sdchsdc</div>
+          <div class="col-sm card h-100">sdchsdc</div>
+          <div class="col-sm card h-100">sdchsdc</div>
+          <div class="col-sm card h-100">sdchsdc</div>
+          <div class="col-sm card h-100">sdchsdc</div>
+
+
+
+        </section>
       </div>
     </div>
   </div>
