--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <form id="search-form" class="form">
           <div class="form-inline form-group">
             <div class="input-group">
-              <input class="form-input weather-search w-100 mb-1" type="text" id="search-input" placeholder="London"
+              <input class="form-input weather-search w-100 mb-1" type="text" id="search-input" placeholder="Bristol"
                 aria-labelledby="form-heading" aria-controls="today forecast" />
               <div class="input-group-append">
                 <button type="submit" class="btn search-button btn-primary btn-block" id="search-button"
