accidentally deleted code, rewritten

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
         </form>
         <div class="list-group" id="history">
-
+          <button class="btn-light mb-1 btn-block clear">Clear History</button>
     
 
         </div>
