--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- max-width for ultra wide resolutions -->
   <main class="container-fluid" style="background-image: url(https://cdn.wallpapersafari.com/13/38/zK0mir.jpg)" >
     <div class="row">
-      <aside class="col-lg-2 pb-3">
+      <aside class="col-lg-2 w-100 pb-3">
         <h2 id="form-heading" class="mt-1 h3 form-label">
           Search for a City:
         </h2>
@@ -45,11 +45,11 @@
         <button class="btn-light mb-1 btn-block clear">Clear History</button>
       </aside>
 
-      <div class="col pb-3 w-75" id="results">
-        <section id="today" class="mt-3 " role="region" aria-live="polite">
+      <div class="col w-75" id="results">
+        <section id="today" class="mt-3" role="region" aria-live="polite">
 
         </section>
-        <section id="forecast" class="row mt-3 w-75" role="region" aria-live="polite">
+        <section id="forecast" class="row mt-3" role="region" aria-live="polite">
         </section>
       </div>
     </div>
